--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/00_app/main.ts"></script>
+    <script type="module" src="/src/00_app/index.ts"></script>
   </body>
 </html>
